# apolo-11

./: .coverage  .gitignore  LICENSE  README.es.md  README.md  main.py  notas_monitor.txt  pyproject.toml  setup.cfg
apolo_11/: folders.py  json_file.py  json_generator.py  main.py
apolo_11/config/: config.yaml
apolo_11/src/: classes.py  config.py  dashboard.py  generator.py  logging_config.py  reporter.py
tests/tests_src/: test_classes.py  test_config.py  test_dashboard.py  test_generator.py  test_logging_config.py  test_reporter.py
