[tool.poetry]
name = "apolo-11"
version = "0.1.0"
description = ""
authors = ["Jose Mosquera <jojumofu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
flake8 = "^7.0.0"
pyyaml = "^6.0.1"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
